--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 </div>
 <div class="col-md-12 mb-3">
 <div class="row">
+  <div class="col-md-3">
+    <input type="text" class="btn mb-2 mb-md-0 btn-primary btn-block">
 <div class="col-md-3">
 <button type="button" class="btn mb-2 mb-md-0 btn-primary btn-block"><span>Like</span>
 <div class="icon d-flex align-items-center justify-content-center">
