--- a/index.html
+++ b/index.html
@@ -47,15 +47,19 @@
 <div class="col-md-12 mb-3">
 <div class="row">
   <div class="col-md-3">
-    <input type="text" class="btn mb-2 mb-md-0 btn-primary btn-block"><span>Keyboard Event 1</span>
+    <input type="text" class="btn mb-2 mb-md-0 btn-primary btn-block"><span>On Key Down</span>
 
     </div>
     <div class="col-md-3">
-    <input type="text" class="btn mb-2 mb-md-0 btn-primary btn-block"><span>Keyboard Event 1</span>
+    <input type="text" class="btn mb-2 mb-md-0 btn-primary btn-block"><span>On key Up</span>
 
     </div>
     <div class="col-md-3">
-    <input type="text" class="btn mb-2 mb-md-0 btn-primary btn-block"><span>Keyboard Event 1</span>
+    <input type="text" class="btn mb-2 mb-md-0 btn-primary btn-block"><span>On Key Press</span>
+
+    </div>
+    <div class="col-md-3">
+    <input type="text" class="btn mb-2 mb-md-0 btn-primary btn-block"><span></span>
 
     </div>
 <div class="col-md-3">
